# EZyRB

./: .gitignore  LICENSE.rst  README.md  pyproject.toml
.github/workflows/: cd.yml  create-tag.yml  master_cleaner.yml  monthly-tagger.yml  tester.yml  testing_pr.yml  tutorial_exporter.yml
docs/source/: ae.rst  aggregation.rst  ann.rst  approximation.rst  automatic_shift_snapshots.rst  code.rst  conf.py  database.rst  database_scaler.rst  database_splitter.rst  gpr.rst  index.rst  installation.rst  kneighbors_regressor.rst  linear.rst  neighbors_regressor.rst  parameter.rst  plugin.rst  pod.rst  podae.rst  quickstart.rst  radius_neighbors_regressor.rst  rbf.rst  reducedordermodel.rst  reduction.rst  regular_grid.rst  shift_snapshots.rst  snapshot.rst  tutorials.rst
ezyrb/: __init__.py  database.py  parameter.py  reducedordermodel.py  regular_grid.py  snapshot.py
ezyrb/approximation/: __init__.py  ann.py  approximation.py  clough_tocher.py  gpr.py  linear.py  (+5 more)
tests/: test_ae.py  test_aggregation.py  test_ann.py  test_approximation.py  test_automatic_shift.py  test_clough_tocher.py  test_database_splitter.py  test_k_neighbors_regressor.py  test_linear.py  test_nnshift.py  test_podae.py  test_radius_neighbors_regressor.py  test_reducedordermodel.py  test_scaler.py  test_shift.py  test_sklearn_wrappers.py
tutorials/: README.md  aggregation.py  aggregation_nn.py  aggregation_tutorial.py  ann_demo.py  tutorial-1.ipynb  tutorial-1.py  tutorial-2.ipynb  tutorial-2.py  tutorial-3.ipynb  tutorial-3.py  tutorial-4.ipynb  tutorial-5.ipynb
utils/: mathlab_versioning.py
(+54 files in other folders)
