[project]
name = "ezyrb"
version = "1.3.1"
description = "Easy Reduced Basis"
readme = "README.md"
authors = [
    {name = "Nicola Demo", email = "demo.nicola@gmail.com"},
    {name = "Marco Tezzele", email = "marcotez@gmail.com"},
]
license = { text = "MIT" }
keywords = [
    "pod", "interpolation", "reduced-basis", 
    "model-order-reduction", "scientific-computing"
]
dependencies = [
    "future",
    "numpy", 
    "scipy",
    "matplotlib",
    "scikit-learn>=1.0",
    "torch",
    "datasets"
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
    "sphinx", 
    "sphinx_rtd_theme"
]
test = [
    "pytest", 
    "pytest-cov"
]
dev = [
    "black",
    "pylint"
]
tutorial = [
    "jupyter",
    "notebook"
]

[project.urls]
Homepage = "https://github.com/mathLab/EZyRB"
Repository = "https://github.com/mathLab/EZyRB"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ezyrb*"]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"